--- a/css/scr.css
+++ b/css/scr.css
@@ -22,8 +22,8 @@ body {
 }
 
 #panel3 { 
-  background: #000 url(../mapa-2.png) 0 0;
-  border-left: 1px solid black;
+  background: #000 url(../images/map-3.jpg) 0 0;
+  border-left: 2px solid black;
   height: 1080px;
   width: 1920px;
   left: 1920px;
@@ -34,24 +34,24 @@ body {
 #panel1 {
   padding: 0;
   left: 0;
-  background: #000 url(../mapa-1.png) 0 0;
+  background: #000 url(../images/map-1.jpg) 0 0;
   height: 1080px;
   width: 1920px;
 }
 #panel2 {
   padding: 0;
   left: 1920px;
-  background: #000 url(../mapa-2.png) 0 0;
+  background: #000 url(../images/map-2.jpg) 0 0;
   height: 1080px;
   width: 1920px;
-  border-left: 1px solid black;
+  border-left: 2px solid black;
 
 }
 .panelHandle {
   height: 1080px;
   width: 10px;
-  background: -moz-linear-gradient(left, rgba(100, 100, 100, 1), rgba(255, 255, 255, 0));
-  background: -webkit-linear-gradient(left, rgba(100, 100, 100, 1), rgba(255, 255, 255, 0));
+ /* background: -moz-linear-gradient(left, rgba(100, 100, 100, 1), rgba(255, 255, 255, 0));
+  background: -webkit-linear-gradient(left, rgba(100, 100, 100, 1), rgba(255, 255, 255, 0)); */
   position: relative;
   left: 0;
 }
