--- a/css/scr.css
+++ b/css/scr.css
@@ -52,7 +52,7 @@ body {
   width: 10px;
  /* background: -moz-linear-gradient(left, rgba(100, 100, 100, 1), rgba(255, 255, 255, 0));
   background: -webkit-linear-gradient(left, rgba(100, 100, 100, 1), rgba(255, 255, 255, 0)); */
-  background-color: white;
+ /* background-color: white;*/
   position: relative;
   left: 0;
 }
@@ -62,7 +62,8 @@ body {
   padding: 50px 30px; /* RC padding */ 
   background-color: #00aeef;
   height: 1080px;
-  border-left: 1px solid black;
+  width: 480px;
+  border-left: 10px solid white;
 }
 
 #panel4 img {
