--- a/css/scr.css
+++ b/css/scr.css
@@ -1,3 +1,7 @@
+@font-face {font-family: "HelveticaNeueW01-77BdCn"; src: url('../helvetica/HelveticaNeueLTStd-BdCn.otf');}
+@font-face {font-family: "HelveticaNeueRoman"; src: url('../helvetica/HelveticaNeueLTStd-Roman.otf');}
+
+
 body {
   min-height: 100%;         
   height: auto !important;
@@ -9,7 +13,15 @@ body {
   -moz-user-select: -moz-none;
   -ms-user-select: none;
   user-select: none;
+  font-family: "HelveticaNeueRoman";
 }
+
+/*
+body > * {
+  cursor: none; 
+}
+*/
+
 .column { 
   position: absolute; 
   float: left;
@@ -49,21 +61,51 @@ body {
 }
 .panelHandle {
   height: 1080px;
-  width: 20px;
+  width: 8px;
  /* background: -moz-linear-gradient(left, rgba(100, 100, 100, 1), rgba(255, 255, 255, 0));
   background: -webkit-linear-gradient(left, rgba(100, 100, 100, 1), rgba(255, 255, 255, 0)); */
-  /* background-color: white; */
+  background-color: white;
   position: absolute;
-  right: 0;
+  left: 0px;
+}
+
+.topInfo {
+    top: 0;
+    left: 0;
+    width: 480px;
+    height: 110px;
+    position: absolute;
+    padding-left: 30px;
+}
+
+.topInfo h1 {
+    width: 480px;
+    font-size: 20px;
+    font-family: "HelveticaNeueW01-77BdCn";
+}
+
+.topInfo.heritage {
+  background-color: #00aeef;
+}
+
+.topInfo.museum {
+  background-color: #ed1c24;
 }
 
 #panel4 { 
   left: 1920px;
   padding: 10px 30px; /* RC padding */ 
-  background-color: #00aeef;
   height: 1080px;
   width: 480px;
-  border-left: 10px solid black;
+  border-left: 8px solid black;
+}
+
+#panel4.heritage {
+  background-color: #00aeef;
+}
+
+#panel4.museum {
+  background-color: #ed1c24;
 }
 
 #panel4.whiteBorder {
@@ -78,15 +120,20 @@ body {
 
 #mus-txt-content {
     clear: both;
-    padding-top: 100px;
+    padding-top: 130px;
     width: 300px;
-    font-size: 10px;
+    font-size: 11px;
 }
 
 #mus-txt-content h1.name {
     width: 250px;
-    font-size: 16px;
- 
+    font-size: 20px;
+    font-family: "HelveticaNeueW01-77BdCn";
+}
+
+#mus-txt-content ul {
+    list-style-type: none;
+    padding: 0;
 }
 
 .mapLabel {
@@ -111,8 +158,8 @@ body {
   width: 230px;
   position: absolute;
   left: 0px;
-  bottom: 50%;
   color: white;
+  margin-top: 50px;
   rotate:(-90deg);
   -moz-transform: translate(75px, 100px); 
   -webkit-transform: rotate(-90deg); 
@@ -124,7 +171,7 @@ body {
   width: 230px;
   position: absolute;
   left: 0px;
-  bottom: 50%;
+  margin-top: 50px;
   color: black;
   rotate:(-90deg);
   -moz-transform: translate(75px, 100px); 
@@ -179,14 +226,99 @@ body {
     height: 500px;
 }
 
-#museums-en {
+#museum.en-pos {
     position: absolute;
     left: 60px;
     top: 160px;
 }
 
-#heritage-en {
+#heritage.en-pos {
     position: absolute;
     left: 60px;
     top: 150px;
 }
+
+#museums.pt-pos {
+    position: absolute;
+    left: 60px;
+    top: 170px;
+}
+
+#heritage.pt-pos {
+    position: absolute;
+    left: 20px;
+    top: 210px;
+}
+
+#state-button-off.en-pos{
+    position: absolute;
+    left: 40px;
+    top: 270px;
+}
+
+#city-button-off.en-pos {
+    position: absolute;
+    left: 50px;
+    top: 330px;
+}
+
+#univ-button-off.en-pos {
+    position: absolute;
+    left: 60px;
+    top: 370px;
+}
+
+#state-button-on.en-pos {
+    position: absolute;
+    left: 40px;
+    top: 270px;
+}
+
+#city-button-on.en-pos {
+    position: absolute;
+    left: 50px;
+    top: 330px;
+}
+
+#univ-button-on.en-pos {
+    position: absolute;
+    left: 60px;
+    top: 370px;
+}
+
+#state-button-off.pt-pos {
+    position: absolute;
+    left: 50px;
+    top: 290px;
+}
+
+#city-button-off.pt-pos {
+    position: absolute;
+    left: 60px;
+    top: 330px;
+}
+
+#univ-button-off.pt-pos {
+    position: absolute;
+    left: 60px;
+    top: 370px;
+}
+
+#state-button-on.pt-pos {
+    position: absolute;
+    left: 50px;
+    top: 290px;
+}
+
+#city-button-on.pt-pos {
+    position: absolute;
+    left: 60px;
+    top: 330px;
+}
+
+#univ-button-on.pt-pos {
+    position: absolute;
+    left: 60px;
+    top: 370px;
+}
+
